@@ -194,6 +194,9 @@ static struct Bool_Opt
 	{"prayconfirm", &flags.prayconfirm, TRUE, SET_IN_GAME},
 	{"preload_tiles", &iflags.wc_preload_tiles, TRUE, DISP_IN_GAME},	/*WC*/
 	{"pushweapon", &flags.pushweapon, FALSE, SET_IN_GAME},
+#ifdef QUIVER_FIRED
+	{"quiver_fired", &iflags.quiver_fired, TRUE, SET_IN_GAME},
+#endif
 #ifdef QWERTZ
 	{"qwertz_layout", &iflags.qwertz_layout, FALSE, SET_IN_GAME},
 #endif
